2014-10-30  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/wiki/lionwiki_lib.php: Ticket #1168.

2014-10-29  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  integria_dbdata.sql
	  extras/mr/14.sql
	  godmode/usuarios/configurar_usuarios.php
	  include/functions.php
	  include/functions_db.php
	  include/functions_form.php
	  include/functions_groups.php
	  operation/side_menu.php
	  operation/incidents/incident_detail.php
	  operation/inventories/inventory_reports.php
	  operation/inventories/inventory_reports_detail.php: Fixed
	several bugs #1497, #1255, #1488, #1486, #1453, #1451, #1399.

2014-10-17  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  integria_demo.sql
	  extras/mr/13.sql
	  include/functions_db.php
	  operation/projects/task_detail.php: Fixed
	bug #1217. Added field "CC" to task detail.

2014-10-16  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/main_menu.php: Now the 'Custom screens' item
	doesn't appear when there aren't custom screens with the
	'show on menu' option enabled.

2014-10-16  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/functions_graph.php: Fixed many errors on the
	function "graph_sla_slicebar".

2014-10-16  Sancho lerena <slerena@artica.es>

	* integria_dbdata.sql,
	integria_demo.sql: Fixed bad insert due new column
	in project table.

2014-10-16  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_graph.php: Fixed bug #1001.

2014-10-16  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/common/download_file.php
	  operation/contracts/contract_detail.php: Fixed
	bug #1385.

2014-10-10  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_db: Added missed '{'.

2014-10-09  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  extras/mr/13.sql
	  operation/projects/project.php
	  operation/projects/project_detail.php
	  include/functions_db: Added 'CC' field
	to project detail. Ticket #1217.

2014-10-09  Vanessa Gil <vanessa.gil@artica.es>
	